--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "038b78e5",
    "metadata": {},
    "outputs": [],
@@ -25,21 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2a9f9a62",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1460, 81), (1459, 80))"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the training and test datasets\n",
     "train = pd.read_csv('../data/train.csv')\n",
@@ -49,210 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a8da7a10",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>MSSubClass</th>\n",
-       "      <th>MSZoning</th>\n",
-       "      <th>LotFrontage</th>\n",
-       "      <th>LotArea</th>\n",
-       "      <th>Street</th>\n",
-       "      <th>Alley</th>\n",
-       "      <th>LotShape</th>\n",
-       "      <th>LandContour</th>\n",
-       "      <th>Utilities</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PoolArea</th>\n",
-       "      <th>PoolQC</th>\n",
-       "      <th>Fence</th>\n",
-       "      <th>MiscFeature</th>\n",
-       "      <th>MiscVal</th>\n",
-       "      <th>MoSold</th>\n",
-       "      <th>YrSold</th>\n",
-       "      <th>SaleType</th>\n",
-       "      <th>SaleCondition</th>\n",
-       "      <th>SalePrice</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>8450</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>208500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>20</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>181500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>11250</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>223500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>70</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>9550</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Abnorml</td>\n",
-       "      <td>140000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>14260</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>250000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 81 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
-       "0   1          60       RL         65.0     8450   Pave   NaN      Reg   \n",
-       "1   2          20       RL         80.0     9600   Pave   NaN      Reg   \n",
-       "2   3          60       RL         68.0    11250   Pave   NaN      IR1   \n",
-       "3   4          70       RL         60.0     9550   Pave   NaN      IR1   \n",
-       "4   5          60       RL         84.0    14260   Pave   NaN      IR1   \n",
-       "\n",
-       "  LandContour Utilities  ... PoolArea PoolQC Fence MiscFeature MiscVal MoSold  \\\n",
-       "0         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
-       "1         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      5   \n",
-       "2         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      9   \n",
-       "3         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
-       "4         Lvl    AllPub  ...        0    NaN   NaN         NaN       0     12   \n",
-       "\n",
-       "  YrSold  SaleType  SaleCondition  SalePrice  \n",
-       "0   2008        WD         Normal     208500  \n",
-       "1   2007        WD         Normal     181500  \n",
-       "2   2008        WD         Normal     223500  \n",
-       "3   2006        WD        Abnorml     140000  \n",
-       "4   2008        WD         Normal     250000  \n",
-       "\n",
-       "[5 rows x 81 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Preview the first few rows of the training set\n",
     "train.head()"
@@ -260,41 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "decc7e60",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PoolQC          1453\n",
-       "MiscFeature     1406\n",
-       "Alley           1369\n",
-       "Fence           1179\n",
-       "MasVnrType       872\n",
-       "FireplaceQu      690\n",
-       "LotFrontage      259\n",
-       "GarageQual        81\n",
-       "GarageFinish      81\n",
-       "GarageType        81\n",
-       "GarageYrBlt       81\n",
-       "GarageCond        81\n",
-       "BsmtFinType2      38\n",
-       "BsmtExposure      38\n",
-       "BsmtCond          37\n",
-       "BsmtQual          37\n",
-       "BsmtFinType1      37\n",
-       "MasVnrArea         8\n",
-       "Electrical         1\n",
-       "Condition2         0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check for missing values in the training set\n",
     "train.isnull().sum().sort_values(ascending=False).head(20)"
@@ -316,6 +74,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3fdb6b54",
+   "metadata": {},
+   "source": [
+    "## 📉 Outlier Detection\n",
+    "\n",
+    "Let's visualize key numerical features with the highest correlation to `SalePrice` to detect possible outliers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8e0c0c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter plot of GrLivArea vs SalePrice\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.scatterplot(data=train, x='GrLivArea', y='SalePrice')\n",
+    "plt.title('GrLivArea vs SalePrice')\n",
+    "plt.xlabel('Above Ground Living Area (sq ft)')\n",
+    "plt.ylabel('Sale Price')\n",
+    "plt.show()\n",
+    "\n",
+    "# Check for unusually large living areas with low sale prices\n",
+    "train[(train['GrLivArea'] > 4000) & (train['SalePrice'] < 300000)]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "54f2db91",
@@ -327,6 +114,24 @@
     "sns.heatmap(corr[['SalePrice']].sort_values('SalePrice', ascending=False), \n",
     "            annot=True, cmap='coolwarm')\n",
     "plt.title('Feature Correlation with SalePrice')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0e4109",
+   "metadata": {},
+   "source": [
+    "## 🧩 Interpreting Missing Values\n",
+    "\n",
+    "In this dataset, many `NaN` values **are not missing at random**, but rather represent **the absence of a feature**.\n",
+    "\n",
+    "For example:\n",
+    "- `PoolQC` is NaN → there is no pool.\n",
+    "- `GarageType` is NaN → no garage.\n",
+    "- `Fence` is NaN → no fence.\n",
+    "\n",
+    "⚠️ Therefore, **dropping or blindly imputing missing values is not appropriate**.\n",
+    "We will instead treat them as meaningful categorical values in further processing.\n"
    ]
   },
   {
@@ -342,22 +147,8 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": ".venv",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
