--- a/notebooks/features.ipynb
+++ b/notebooks/features.ipynb
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f9a1905a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1460, 81)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import pandas as pd\n",
@@ -34,10 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "773719be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LotFrontage    259\n",
+       "Id               0\n",
+       "MSSubClass       0\n",
+       "MSZoning         0\n",
+       "LotArea          0\n",
+       "Street           0\n",
+       "Alley            0\n",
+       "LotShape         0\n",
+       "LandContour      0\n",
+       "Utilities        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace NaNs with 'None' or 0 where appropriate (not imputation, but semantic replacement)\n",
     "none_cols = [\n",
@@ -67,10 +99,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e8aee1d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HasPool</th>\n",
+       "      <th>HasGarage</th>\n",
+       "      <th>HasBasement</th>\n",
+       "      <th>HasFireplace</th>\n",
+       "      <th>HasFence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   HasPool  HasGarage  HasBasement  HasFireplace  HasFence\n",
+       "0        0          1            1             0         0\n",
+       "1        0          1            1             1         0\n",
+       "2        0          1            1             1         0\n",
+       "3        0          1            1             1         0\n",
+       "4        0          1            1             1         0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create binary indicator columns\n",
     "train['HasPool'] = (train['PoolQC'] != 'None').astype(int)\n",
@@ -92,10 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "094e97fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fill LotFrontage by median value per Neighborhood\n",
     "train['LotFrontage'] = train.groupby('Neighborhood')['LotFrontage'].transform(\n",
@@ -116,10 +246,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6c24e1a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MSZoning',\n",
+       " 'Street',\n",
+       " 'Alley',\n",
+       " 'LotShape',\n",
+       " 'LandContour',\n",
+       " 'Utilities',\n",
+       " 'LotConfig',\n",
+       " 'LandSlope',\n",
+       " 'Neighborhood',\n",
+       " 'Condition1',\n",
+       " 'Condition2',\n",
+       " 'BldgType',\n",
+       " 'HouseStyle',\n",
+       " 'RoofStyle',\n",
+       " 'RoofMatl',\n",
+       " 'Exterior1st',\n",
+       " 'Exterior2nd',\n",
+       " 'MasVnrType',\n",
+       " 'ExterQual',\n",
+       " 'ExterCond',\n",
+       " 'Foundation',\n",
+       " 'BsmtQual',\n",
+       " 'BsmtCond',\n",
+       " 'BsmtExposure',\n",
+       " 'BsmtFinType1',\n",
+       " 'BsmtFinType2',\n",
+       " 'Heating',\n",
+       " 'HeatingQC',\n",
+       " 'CentralAir',\n",
+       " 'Electrical',\n",
+       " 'KitchenQual',\n",
+       " 'Functional',\n",
+       " 'FireplaceQu',\n",
+       " 'GarageType',\n",
+       " 'GarageFinish',\n",
+       " 'GarageQual',\n",
+       " 'GarageCond',\n",
+       " 'PavedDrive',\n",
+       " 'PoolQC',\n",
+       " 'Fence',\n",
+       " 'MiscFeature',\n",
+       " 'SaleType',\n",
+       " 'SaleCondition']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Select categorical columns\n",
     "cat_cols = train.select_dtypes(include=['object']).columns.tolist()\n",
@@ -128,10 +311,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ef88531a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSZoning</th>\n",
+       "      <th>Street</th>\n",
+       "      <th>Alley</th>\n",
+       "      <th>LotShape</th>\n",
+       "      <th>LandContour</th>\n",
+       "      <th>Utilities</th>\n",
+       "      <th>LotConfig</th>\n",
+       "      <th>LandSlope</th>\n",
+       "      <th>Neighborhood</th>\n",
+       "      <th>Condition1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>GarageType</th>\n",
+       "      <th>GarageFinish</th>\n",
+       "      <th>GarageQual</th>\n",
+       "      <th>GarageCond</th>\n",
+       "      <th>PavedDrive</th>\n",
+       "      <th>PoolQC</th>\n",
+       "      <th>Fence</th>\n",
+       "      <th>MiscFeature</th>\n",
+       "      <th>SaleType</th>\n",
+       "      <th>SaleCondition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 43 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   MSZoning  Street  Alley  LotShape  LandContour  Utilities  LotConfig  \\\n",
+       "0         3       1      1         3            3          0          4   \n",
+       "1         3       1      1         3            3          0          2   \n",
+       "2         3       1      1         0            3          0          4   \n",
+       "3         3       1      1         0            3          0          0   \n",
+       "4         3       1      1         0            3          0          2   \n",
+       "\n",
+       "   LandSlope  Neighborhood  Condition1  ...  GarageType  GarageFinish  \\\n",
+       "0          0             5           2  ...           1             2   \n",
+       "1          0            24           1  ...           1             2   \n",
+       "2          0             5           2  ...           1             2   \n",
+       "3          0             6           2  ...           5             3   \n",
+       "4          0            15           2  ...           1             2   \n",
+       "\n",
+       "   GarageQual  GarageCond  PavedDrive  PoolQC  Fence  MiscFeature  SaleType  \\\n",
+       "0           5           5           2       3      4            1         8   \n",
+       "1           5           5           2       3      4            1         8   \n",
+       "2           5           5           2       3      4            1         8   \n",
+       "3           5           5           2       3      4            1         8   \n",
+       "4           5           5           2       3      4            1         8   \n",
+       "\n",
+       "   SaleCondition  \n",
+       "0              4  \n",
+       "1              4  \n",
+       "2              4  \n",
+       "3              0  \n",
+       "4              4  \n",
+       "\n",
+       "[5 rows x 43 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Apply Label Encoding for simplicity (for baseline models)\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -157,10 +547,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2ec72c71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Saved to ../data/train_clean.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the processed training data to CSV\n",
     "train.to_csv('../data/train_clean.csv', index=False)\n",
@@ -168,7 +566,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
