--- a/notebooks/features.ipynb
+++ b/notebooks/features.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f9a1905a",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "(1460, 81)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,27 +45,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "773719be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LotFrontage    259\n",
-       "Id               0\n",
-       "MSSubClass       0\n",
-       "MSZoning         0\n",
-       "LotArea          0\n",
-       "Street           0\n",
-       "Alley            0\n",
-       "LotShape         0\n",
-       "LandContour      0\n",
-       "Utilities        0\n",
+       "LotFrontage     259\n",
+       "Id                0\n",
+       "BedroomAbvGr      0\n",
+       "GarageYrBlt       0\n",
+       "GarageType        0\n",
+       "FireplaceQu       0\n",
+       "Fireplaces        0\n",
+       "Functional        0\n",
+       "TotRmsAbvGrd      0\n",
+       "KitchenQual       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e8aee1d1",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "4        0          1            1             1         0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "094e97fc",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6c24e1a7",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        " 'SaleCondition']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ef88531a",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2ec72c71",
    "metadata": {},
    "outputs": [
@@ -568,9 +568,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Kaggle House Prices",
    "language": "python",
-   "name": "python3"
+   "name": "kaggle-house-prices"
   },
   "language_info": {
    "codemirror_mode": {
@@ -582,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
